--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,13 +101,14 @@ body {
 }
 
 .header {
-  /* background-image: url(/img/trasp2.png); */
+  
+  /* background-color: #333; */
   background-image: linear-gradient(
       rgba(0, 0, 0, 0.651) 10%,
       rgba(0, 0, 0, 0.63) 20%,
-      rgb(7, 7, 7)
+      rgba(7, 7, 7)
     ),
-    url(/img/aptt.png);
+    url("/img/aptt.png") !important;
   color: rgb(37, 37, 37);
   background-size: cover;
   height: 70vh;
